--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,14 @@ python:
   - "3.6"
   - "3.7"
 
+env:
+  - NAMEKO_VERSION===2.8.5
+  - NAMEKO_VERSION===2.9.1
+  - NAMEKO_VERSION===2.10.0
+  - NAMEKO_VERSION===2.11.0
+  - NAMEKO_VERSION=>=2.12.0
+  - NAMEKO_VERSION===3.0.0-rc6
+
 services:
   - redis-server
 
