--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,7 @@ services:
 install:
   - pip install -U pip setuptools
   - pip install -U -e ".[dev]"
-  # we can't test eventlet>0.20.1 in our py27 CI environment until the fix
-  # in https://github.com/eventlet/eventlet/issues/401 is released
-  - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then travis_retry pip install eventlet==0.20.1; fi
+  - pip install -U nameko$NAMEKO_VERSION
 
 script:
   - make test
