--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
   - redis-server
 
 stages:
+  - static
   - test
 
 jobs:
@@ -26,6 +27,10 @@ jobs:
     env: DEPS="nameko>=2.12.0"
   - python: 3.5
     env: DEPS="nameko>=2.12.0"
+    stage: static
+    install: pip install pre-commit
+    script: make static
+    env:
 
 matrix:
   allow_failures:
@@ -38,7 +43,7 @@ install:
   - pip install -U $DEPS
 
 script:
-  - make test
+  - make pytest
 
 deploy:
 
