--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ jobs:
     env: DEPS="nameko>=2.12.0"
   - python: 3.5
     env: DEPS="nameko>=2.12.0"
+  - python: 3.6
     stage: static
     install: pip install pre-commit
     script: make static
