--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ jobs:
     env: DEPS="nameko>=2.12.0"
   - python: 3.6
     stage: static
-    install: pip install pre-commit
+    install:
+    - pip install -U -e ".[dev]"
+    - pip install pre-commit
     script: make static
     env:
 
